...
    super.key,
    bool? showSpotifyButton,
  }) : this.showSpotifyButton = showSpotifyButton ?? true;

  final bool showSpotifyButton;

  static String routeName = 'onboarding';
  static String routePath = 'onboarding';

  @override
  State<OnboardingWidget> createState() => _OnboardingWidgetState();
}

...
                            child: Column(
                              mainAxisSize: MainAxisSize.max,
                              children: [
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('usernameInput_f2vp'),
                                    controller:
                                        _model.usernameInputTextController,
                                    focusNode: _model.usernameInputFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.next,
                                    obscureText: false,
...
                                        .asValidator(context),
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('nameInput_jt4u'),
                                    controller: _model.nameInputTextController,
                                    focusNode: _model.nameInputFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.next,
                                    obscureText: false,
                                    decoration: InputDecoration(
...
                                        .asValidator(context),
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('locationInput_24ux'),
                                    controller:
                                        _model.locationInputTextController,
                                    focusNode: _model.locationInputFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.next,
                                    obscureText: false,
...
                                  ],
                                  borderRadius: BorderRadius.circular(12.0),
                                ),
                                child: Align(
                                  alignment: AlignmentDirectional(0.0, 0.0),
                                  child: FFButtonWidget(
                                    key: ValueKey('Button_i9r9'),
                                    onPressed: () async {
                                      logFirebaseEvent(
                                          'ONBOARDING_PAGE_SAVE_BTN_ON_TAP');
                                      logFirebaseEvent(
                                          'Button_firestore_query');
                                      _model.usernameCheck =
...
