...
                  Padding(
                    padding:
                        EdgeInsetsDirectional.fromSTEB(0.0, 20.0, 0.0, 0.0),
                    child: ClipRRect(
                      borderRadius: BorderRadius.circular(20.0),
                      child: Image.asset(
                        key: ValueKey('Image_s38o'),
                        'assets/images/Put-U-On-Logo.png',
                        width: 200.0,
                        height: 200.0,
                        fit: BoxFit.cover,
                      ),
                    ),
...
                              indicatorColor: Color(0xB3923297),
                              tabs: [
                                Tab(
                                  text: 'Sign Up',
                                ),
                                Tab(
                                  key: ValueKey('LoginTab_8ak4'),
                                  text: 'Login',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
...
                                  children: [
                                    Padding(
                                      padding: EdgeInsets.all(24.0),
                                      child: Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('LoginEmailField_uhu5'),
                                          controller: _model
                                              .loginEmailFieldTextController,
                                          focusNode:
                                              _model.loginEmailFieldFocusNode,
                                          autofocus: true,
                                          textInputAction: TextInputAction.next,
...
                                      padding: EdgeInsetsDirectional.fromSTEB(
                                          24.0, 0.0, 24.0, 24.0),
                                      child: Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey(
                                              'LoginPasswordField_ys4d'),
                                          controller: _model
                                              .loginPasswordFieldTextController,
                                          focusNode: _model
                                              .loginPasswordFieldFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.done,
...
                                              ],
                                              borderRadius:
                                                  BorderRadius.circular(12.0),
                                            ),
                                          ),
                                          FFButtonWidget(
                                            key: ValueKey('Button_6hz9'),
                                            onPressed: () async {
                                              logFirebaseEvent(
                                                  'LOGIN_SIGN_UP_PAGE_LOGIN_BTN_ON_TAP');
                                              logFirebaseEvent('Button_auth');
                                              GoRouter.of(context)
                                                  .prepareAuthEvent();
...
