...
                                      )
                                    ],
                                    borderRadius: BorderRadius.circular(12.0),
                                  ),
                                ),
                                FFButtonWidget(
                                  key: ValueKey('Button_ykkm'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'USER_SETTINGS_EDIT_PROFILE_BTN_ON_TAP');
                                    logFirebaseEvent('Button_navigate_to');

                                    context
...
                                      )
                                    ],
                                    borderRadius: BorderRadius.circular(12.0),
                                  ),
                                ),
                                FFButtonWidget(
                                  key: ValueKey('Button_kb3l'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'USER_SETTINGS_GENRE_SELECTION_BTN_ON_TAP');
                                    logFirebaseEvent('Button_navigate_to');

                                    context.pushNamed(
...
                                      )
                                    ],
                                    borderRadius: BorderRadius.circular(12.0),
                                  ),
                                ),
                                FFButtonWidget(
                                  key: ValueKey('Button_h1kd'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'USER_SETTINGS_PAGE_LOG_OUT_BTN_ON_TAP');
                                    logFirebaseEvent('Button_auth');
                                    GoRouter.of(context).prepareAuthEvent();
                                    await authManager.signOut();
...
