...
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    Padding(
                      padding:
                          EdgeInsetsDirectional.fromSTEB(0.0, 32.0, 0.0, 0.0),
                      child: Text(
                        'Let\'s choose some music genres...',
                        style:
                            FlutterFlowTheme.of(context).headlineLarge.override(
                                  font: GoogleFonts.interTight(
                                    fontWeight: FlutterFlowTheme.of(context)
                                        .headlineLarge
                                        .fontWeight,
...
                              )
                            ],
                            borderRadius: BorderRadius.circular(12.0),
                          ),
                        ),
                        FFButtonWidget(
                          key: ValueKey('Button_o0qr'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'TAG_SELECTION_COMPLETE_SELECTION_BTN_ON_');
                            if (widget.referral == 'sign up') {
                              logFirebaseEvent('Button_backend_call');

...
